Update perlin js request to https

--- a/drawing/index.html
+++ b/drawing/index.html
@@ -9,7 +9,7 @@
         }
     </style>
     <script src="./perlin.js"></script>
-    <script src='http://git.io/perlin.js'></script>
+    <script src='https://git.io/perlin.js'></script>
     <script src="./domain-warping.js"></script>
 </head>
 
